--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
-    <string name="app_name">MVVM Concept</string>
-    <string name="get_data">Get Data</string>
+    <string name="app_name">Taskify</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="tasks">Tasks</string>
+    <string name="settings">Settings</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="notifications">Notifications</string>
+    <string name="enable_dark_mode">Enable Dark Mode</string>
+    <string name="enable_notifications">Enable Notifications</string>
+    <string name="task_details">Task Details</string>
+    <string name="loading">Loading...</string>
+    <string name="error_occurred">An error occurred</string>
 </resources>
