--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="task_details">Task Details</string>
     <string name="loading">Loading...</string>
     <string name="error_occurred">An error occurred</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragmenta">FragmentA</string>
+    <string name="frament_b">Frament B</string>
+    <string name="get_users">Get Users</string>
+    <string name="_1">1</string>
+    <string name="leanne_graham">Leanne</string>
+    <string name="sincere_april_biz">Sin@april.biz</string>
 </resources>
